--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "mobile": "npx react-native run-ios --simulator='iPhone 15 Pro' & npx react-native run-android"
   },
   "dependencies": {
+    "@gorhom/bottom-sheet": "^4.6.3",
     "@react-native-community/blur": "^4.4.0",
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
     "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
@@ -27,6 +31,8 @@
     "@babel/core": "^7.24.8",
     "@babel/preset-env": "^7.24.8",
     "@babel/runtime": "^7.24.8",
+    "@eslint/config-array": "^0.17.0",
+    "@eslint/object-schema": "^2.1.4",
     "@react-native/babel-preset": "0.74.85",
     "@react-native/eslint-config": "0.74.85",
     "@react-native/metro-config": "0.74.85",
@@ -34,10 +40,10 @@
     "@types/react": "^18.3.3",
     "@types/react-test-renderer": "^18.3.0",
     "babel-jest": "^29.7.0",
-    "eslint": "^9.7.0",
+    "eslint": "^8.57.0",
     "jest": "^29.7.0",
     "prettier": "3.3.3",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "^18.2.0",
     "typescript": "5.5.3"
   },
   "engines": {
