--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.3",
+    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.14.0",
