--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.3",
-    "react-native-calendars": "^1.1306.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.14.0",
@@ -40,10 +39,14 @@
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.3.3",
     "@types/react-test-renderer": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.7.0",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
     "react-test-renderer": "^18.2.0",
     "typescript": "5.5.3"
   },
