--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.10.0",
+    "@realm/react": "^0.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.74.3",
@@ -25,7 +26,8 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-size-matters": "^0.4.2",
-    "react-native-status-bar-height": "^2.6.0"
+    "react-native-status-bar-height": "^2.6.0",
+    "realm": "^12.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.24.8",
