--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-native": "0.74.3",
     "react-native-gesture-handler": "^2.17.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.14.0",
     "react-native-safe-area-context": "^4.10.8",
