--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^3.32.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-swipe-list-view": "^3.2.9",
     "realm": "^12.12.1"
   },
   "devDependencies": {
