--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-screens": "^3.32.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^10.1.0",
     "realm": "^12.13.0"
   },
   "devDependencies": {
@@ -41,6 +42,7 @@
     "@react-native/metro-config": "0.74.85",
     "@react-native/typescript-config": "0.74.85",
     "@types/react": "^18.3.3",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
