--- a/package.json
+++ b/package.json
@@ -24,11 +24,11 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.15.0",
+    "react-native-rename": "^3.2.14",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-status-bar-height": "^2.6.0",
-    "react-native-vector-icons": "^10.1.0",
     "realm": "^12.13.0"
   },
   "devDependencies": {
