--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-screens": "^3.32.0",
     "react-native-size-matters": "^0.4.2",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^10.1.0",
     "realm": "^12.13.0"
   },
   "devDependencies": {
